[package]
name = "_2b2q"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
faccess = "0.2.4"
piper = "0.1.3"
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
tar = "0.4.38"
tokio = { features = ["parking_lot"] }
